<resources>
    <string name="app_name">Movie DB</string>
    <string name="sub_title">Best of movie !</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rate">Top Rate</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_genres">Genres</string>
    <string name="text_home">Home</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_settings">Settings</string>
    <string name="text_contact">Contact Us</string>
    <string name="text_search_hint">Enter movie, categories,...</string>
    <string name="text_movie_name">Movie</string>
    <string name="text_categories">Categories</string>
    <string name="text_search">Search</string>
    <string name="version">Version 1.0.0</string>
</resources>
