<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/relative_navigation"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:layout_gravity="start">
    <RelativeLayout
        android:id="@+id/relative_navi_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_navi_header"
        android:padding="@dimen/dp_30"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="@dimen/sp_25"
            android:textColor="@color/color_white"
            android:layout_toRightOf="@id/image_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_title"
            android:textColor="@color/color_white"
            android:layout_below="@+id/text_name"
            android:layout_toRightOf="@id/image_icon"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linear_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ItemMenu"
        android:layout_below="@+id/relative_navi_header">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home_green"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_home"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ItemMenu"
        android:layout_below="@+id/linear_home">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorites_red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_favorites"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ItemMenu"
        android:layout_below="@id/linear_favorites">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_settings"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ItemMenu"
        android:layout_below="@+id/linear_settings">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_contact"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_contact"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"/>
</RelativeLayout>
